Revision history for Perl extension Getopt-EX

{{$NEXT}}

v1.5.1 2017-12-21T14:09:25Z

    - Accept multiple BASECLASSes.

v1.4.2 2017-12-16T07:38:27Z

    Colormap.pm
    - Copy {EL} sequence to ending RESET, to keep the effect on multiple lines.
    - Improve Colormap.pm and write test.

v1.4.1 2017-12-14T18:05:54Z

    - [Loader.pm] Add config option PARSE_MODULE_OPT and IGNORE_NO_MODULE.
    - [Colormap.pm] Support generic ANSI CSI sequence in the form of "{NAME}".

v1.3.1 2017-12-12T15:05:01Z

    - [Colormap.pm] Add E effect char to erase line.
    - [Colormap.pm] Support more flexible ANSI RESET.
    - [Loader.pm] More portable error handling.
    - [Module.pm] Support alternate names for builtin options.

v1.2.1 2017-11-16T11:07:06Z

    Most of these changes are made to implement `optex' command.

    - Pre-define __PACKAGE__ macro.
    - Localize @ARGV before calling function.
    - Allow subdirectory module.
    - Implement $<move>, $<remove> and $<copy> notation.
    - Call module initialize() before function given by -M.
    - Support HERE document.
    - Fix to accept "--option=value" lvalue in "define" statement.
    - Fix to accept empty BASECLASS.

v1.1.1 2017-08-18T04:17:58Z

    - Spun off from Greple command repository.
