@@ -4,12 +4,14 @@ use warnings;
 
 sub initialize {
     my $mod = shift;
-    $mod->mode(wildcard => 1);
+    # $mod->mode(wildcard => 1);
 }
 
 1;
 
 __DATA__
+
+mode wildcard
 
 option --expm lib/Getopt/*.pm
 
