@@ -2,6 +2,8 @@ Revision history for Perl extension Getopt-EX
 
 {{$NEXT}}
 
+    - Implement Getopt::EX::Module::mode method.
+
 v1.5.1 2017-12-21T14:09:25Z
 
     - Accept multiple BASECLASSes.
